// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[MailboxItemsStore] Vuex store can filter a folder ('unread') 1`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:47.000Z,
  "flags": Array [],
  "from": Object {
    "address": "john.q.public@example.com",
    "dn": "Joe Q. Public",
    "kind": "Originator",
  },
  "hasSeparator": true,
  "headers": Array [],
  "id": 476,
  "imapUid": 11,
  "key": "WzQ3NiwiZm9sZGVyOnVpZCJd",
  "messageId": "<5678.21-Nov-1997@example.com>",
  "preview": "Hi everyone.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 220,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@test.example",
      "kind": "Primary",
    },
  ],
  "uid": "11.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can filter a folder ('unread') 2`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 472,
  "imapUid": 7,
  "key": "WzQ3MiwiZm9sZGVyOnVpZCJd",
  "messageId": "<abcd.1234@local.machine.tld>",
  "preview": "This is a reply to your reply.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": Array [
    "<1234@local.machine.example>",
    "<3456@example.net>",
  ],
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 333,
  },
  "subject": "Re: Saying Hello",
  "to": Array [
    Object {
      "address": "smith@home.example",
      "dn": "Mary Smith: Personal Account",
      "kind": "Primary",
    },
  ],
  "uid": "7.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can filter a folder ('unread') 3`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:45.000Z,
  "flags": Array [],
  "from": Object {
    "address": "pete@silly.example",
    "dn": "Pete",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 469,
  "imapUid": 4,
  "key": "WzQ2OSwiZm9sZGVyOnVpZCJd",
  "messageId": "<testabcd.1234@silly.example>",
  "preview": "Testing.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 230,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "c@a.test",
      "dn": "Chris Jones",
      "kind": "Primary",
    },
    Object {
      "address": "joe@where.test",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@one.test",
      "dn": "John",
      "kind": "Primary",
    },
  ],
  "uid": "4.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 1`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:48.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": true,
  "headers": Array [],
  "id": 477,
  "imapUid": 12,
  "key": "WzQ3NywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 223,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "12.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 2`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:48.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "atsushi@example.com",
    "dn": "Atsushi Yoshida",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [
    Object {
      "name": "Reply-To",
      "values": Array [
        "rudeboyjet@gmail.com",
      ],
    },
  ],
  "id": 478,
  "imapUid": 13,
  "key": "WzQ3OCwiZm9sZGVyOnVpZCJd",
  "messageId": "<0CC5E11ED2C1D@example.com>",
  "preview": "Hello",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "iso-2022-jp",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 486,
  },
  "subject": "Re: TEST 	テストテスト",
  "to": Array [
    Object {
      "address": "rudeboyjet@gmail.com",
      "kind": "Primary",
    },
  ],
  "uid": "13.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 3`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:47.000Z,
  "flags": Array [],
  "from": Object {
    "address": "pete@silly.test",
    "dn": "Pete",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 475,
  "imapUid": 10,
  "key": "WzQ3NSwiZm9sZGVyOnVpZCJd",
  "messageId": "             <testabcd.1234@silly.test>",
  "preview": "Testing.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 489,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "c@public.example",
      "dn": "Chris Jones",
      "kind": "Primary",
    },
    Object {
      "address": "joe@example.org",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@one.test",
      "dn": "John",
      "kind": "Primary",
    },
  ],
  "uid": "10.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 4`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:47.000Z,
  "flags": Array [],
  "from": Object {
    "address": "john.q.public@example.com",
    "dn": "Joe Q. Public",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 476,
  "imapUid": 11,
  "key": "WzQ3NiwiZm9sZGVyOnVpZCJd",
  "messageId": "<5678.21-Nov-1997@example.com>",
  "preview": "Hi everyone.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 220,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@test.example",
      "kind": "Primary",
    },
  ],
  "uid": "11.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 5`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 472,
  "imapUid": 7,
  "key": "WzQ3MiwiZm9sZGVyOnVpZCJd",
  "messageId": "<abcd.1234@local.machine.tld>",
  "preview": "This is a reply to your reply.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": Array [
    "<1234@local.machine.example>",
    "<3456@example.net>",
  ],
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 333,
  },
  "subject": "Re: Saying Hello",
  "to": Array [
    Object {
      "address": "smith@home.example",
      "dn": "Mary Smith: Personal Account",
      "kind": "Primary",
    },
  ],
  "uid": "7.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 6`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 473,
  "imapUid": 8,
  "key": "WzQ3MywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 409,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "8.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 7`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 474,
  "imapUid": 9,
  "key": "WzQ3NCwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 447,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "9.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 8`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:45.000Z,
  "flags": Array [],
  "from": Object {
    "address": "pete@silly.example",
    "dn": "Pete",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 469,
  "imapUid": 4,
  "key": "WzQ2OSwiZm9sZGVyOnVpZCJd",
  "messageId": "<testabcd.1234@silly.example>",
  "preview": "Testing.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 230,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "c@a.test",
      "dn": "Chris Jones",
      "kind": "Primary",
    },
    Object {
      "address": "joe@where.test",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@one.test",
      "dn": "John",
      "kind": "Primary",
    },
  ],
  "uid": "4.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 9`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:43.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 470,
  "imapUid": 5,
  "key": "WzQ3MCwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 232,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "5.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 10`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:45.000Z,
  "flags": Array [],
  "from": Object {
    "address": "mary@example.net",
    "dn": "Mary Smith",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [
    Object {
      "name": "Reply-To",
      "values": Array [
        "\\"Mary Smith: Personal Account\\" <smith@home.example>",
      ],
    },
  ],
  "id": 471,
  "imapUid": 6,
  "key": "WzQ3MSwiZm9sZGVyOnVpZCJd",
  "messageId": "<3456@example.net>",
  "preview": "This is a reply to your hello.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": Array [
    "<1234@local.machine.example>",
  ],
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 354,
  },
  "subject": "Re: Saying Hello",
  "to": Array [
    Object {
      "address": "jdoe@machine.example",
      "dn": "John Doe",
      "kind": "Primary",
    },
  ],
  "uid": "6.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 11`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:44.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 467,
  "imapUid": 2,
  "key": "WzQ2NywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 280,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "2.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 12`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [
    Object {
      "address": "boss@nil.test",
      "kind": "CarbonCopy",
    },
    Object {
      "address": "sysservices@example.net",
      "dn": "Giant; \\"Big\\" Box",
      "kind": "CarbonCopy",
    },
  ],
  "date": 2019-11-13T10:20:44.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "john.q.public@example.com",
    "dn": "Joe Q. Public",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 468,
  "imapUid": 3,
  "key": "WzQ2OCwiZm9sZGVyOnVpZCJd",
  "messageId": "<5678.21-Nov-1997@example.com>",
  "preview": "Hi everyone.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 285,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "mary@x.test",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@example.org",
      "kind": "Primary",
    },
    Object {
      "address": "one@y.test",
      "dn": "Who?",
      "kind": "Primary",
    },
  ],
  "uid": "3.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store can load messages from a folder into store 13`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:43.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 466,
  "imapUid": 1,
  "key": "WzQ2NiwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 232,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "1.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 1`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:48.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": true,
  "headers": Array [],
  "id": 477,
  "imapUid": 12,
  "key": "WzQ3NywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 223,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "12.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 2`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:48.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "atsushi@example.com",
    "dn": "Atsushi Yoshida",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [
    Object {
      "name": "Reply-To",
      "values": Array [
        "rudeboyjet@gmail.com",
      ],
    },
  ],
  "id": 478,
  "imapUid": 13,
  "key": "WzQ3OCwiZm9sZGVyOnVpZCJd",
  "messageId": "<0CC5E11ED2C1D@example.com>",
  "preview": "Hello",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "iso-2022-jp",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 486,
  },
  "subject": "Re: TEST 	テストテスト",
  "to": Array [
    Object {
      "address": "rudeboyjet@gmail.com",
      "kind": "Primary",
    },
  ],
  "uid": "13.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 3`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:47.000Z,
  "flags": Array [],
  "from": Object {
    "address": "pete@silly.test",
    "dn": "Pete",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 475,
  "imapUid": 10,
  "key": "WzQ3NSwiZm9sZGVyOnVpZCJd",
  "messageId": "             <testabcd.1234@silly.test>",
  "preview": "Testing.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 489,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "c@public.example",
      "dn": "Chris Jones",
      "kind": "Primary",
    },
    Object {
      "address": "joe@example.org",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@one.test",
      "dn": "John",
      "kind": "Primary",
    },
  ],
  "uid": "10.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 4`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:47.000Z,
  "flags": Array [],
  "from": Object {
    "address": "john.q.public@example.com",
    "dn": "Joe Q. Public",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 476,
  "imapUid": 11,
  "key": "WzQ3NiwiZm9sZGVyOnVpZCJd",
  "messageId": "<5678.21-Nov-1997@example.com>",
  "preview": "Hi everyone.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 220,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@test.example",
      "kind": "Primary",
    },
  ],
  "uid": "11.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 5`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 472,
  "imapUid": 7,
  "key": "WzQ3MiwiZm9sZGVyOnVpZCJd",
  "messageId": "<abcd.1234@local.machine.tld>",
  "preview": "This is a reply to your reply.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": Array [
    "<1234@local.machine.example>",
    "<3456@example.net>",
  ],
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 333,
  },
  "subject": "Re: Saying Hello",
  "to": Array [
    Object {
      "address": "smith@home.example",
      "dn": "Mary Smith: Personal Account",
      "kind": "Primary",
    },
  ],
  "uid": "7.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 6`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 473,
  "imapUid": 8,
  "key": "WzQ3MywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 409,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "8.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 7`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:46.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 474,
  "imapUid": 9,
  "key": "WzQ3NCwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 447,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "9.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 8`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:45.000Z,
  "flags": Array [],
  "from": Object {
    "address": "pete@silly.example",
    "dn": "Pete",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 469,
  "imapUid": 4,
  "key": "WzQ2OSwiZm9sZGVyOnVpZCJd",
  "messageId": "<testabcd.1234@silly.example>",
  "preview": "Testing.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 230,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "c@a.test",
      "dn": "Chris Jones",
      "kind": "Primary",
    },
    Object {
      "address": "joe@where.test",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@one.test",
      "dn": "John",
      "kind": "Primary",
    },
  ],
  "uid": "4.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 9`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:43.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 470,
  "imapUid": 5,
  "key": "WzQ3MCwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 232,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "5.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 10`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:45.000Z,
  "flags": Array [],
  "from": Object {
    "address": "mary@example.net",
    "dn": "Mary Smith",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [
    Object {
      "name": "Reply-To",
      "values": Array [
        "\\"Mary Smith: Personal Account\\" <smith@home.example>",
      ],
    },
  ],
  "id": 471,
  "imapUid": 6,
  "key": "WzQ3MSwiZm9sZGVyOnVpZCJd",
  "messageId": "<3456@example.net>",
  "preview": "This is a reply to your hello.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": Array [
    "<1234@local.machine.example>",
  ],
  "states": Array [
    "not-seen",
  ],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 354,
  },
  "subject": "Re: Saying Hello",
  "to": Array [
    Object {
      "address": "jdoe@machine.example",
      "dn": "John Doe",
      "kind": "Primary",
    },
  ],
  "uid": "6.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 11`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:44.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 467,
  "imapUid": 2,
  "key": "WzQ2NywiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 280,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "2.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 12`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [
    Object {
      "address": "boss@nil.test",
      "kind": "CarbonCopy",
    },
    Object {
      "address": "sysservices@example.net",
      "dn": "Giant; \\"Big\\" Box",
      "kind": "CarbonCopy",
    },
  ],
  "date": 2019-11-13T10:20:44.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "john.q.public@example.com",
    "dn": "Joe Q. Public",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 468,
  "imapUid": 3,
  "key": "WzQ2OCwiZm9sZGVyOnVpZCJd",
  "messageId": "<5678.21-Nov-1997@example.com>",
  "preview": "Hi everyone.",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 285,
  },
  "subject": null,
  "to": Array [
    Object {
      "address": "mary@x.test",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
    Object {
      "address": "jdoe@example.org",
      "kind": "Primary",
    },
    Object {
      "address": "one@y.test",
      "dn": "Who?",
      "kind": "Primary",
    },
  ],
  "uid": "3.",
  "userSession": null,
}
`;

exports[`[MailboxItemsStore] Vuex store filter a folder with 'all' filter is handled as no filter 13`] = `
Message {
  "actions": Object {
    "FORWARD": "forward",
    "REPLY": "reply",
    "REPLYALL": "replyAll",
  },
  "bcc": Array [],
  "cc": Array [],
  "date": 2019-11-13T10:20:43.000Z,
  "flags": Array [
    "\\\\Seen",
  ],
  "from": Object {
    "address": "jdoe@machine.example",
    "dn": "John Doe",
    "kind": "Originator",
  },
  "hasSeparator": false,
  "headers": Array [],
  "id": 466,
  "imapUid": 1,
  "key": "WzQ2NiwiZm9sZGVyOnVpZCJd",
  "messageId": "<1234@local.machine.example>",
  "preview": "This is a message just to say hello. So, \\"Hello\\".",
  "range": DateRange {
    "end": LocalDate {
      "date": Date { NaN },
    },
    "name": "mail.list.range.older",
    "start": LocalDate {
      "date": 0000-01-01T00:00:00.000Z,
    },
  },
  "recipientFields": Object {
    "CC": "cc",
    "TO": "to",
  },
  "recipientHeaders": Object {
    "MAIL_FOLLOWUP_TO": "Mail-Followup-To",
    "MAIL_REPLY_TO": "Mail-Reply-To",
    "REPLY_TO": "Reply-To",
  },
  "references": null,
  "states": Array [],
  "structure": Object {
    "address": "1",
    "charset": "us-ascii",
    "encoding": "7bit",
    "mime": "text/plain",
    "size": 232,
  },
  "subject": "Saying Hello",
  "to": Array [
    Object {
      "address": "mary@example.net",
      "dn": "Mary Smith",
      "kind": "Primary",
    },
  ],
  "uid": "1.",
  "userSession": null,
}
`;
